<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.shark.renovatio</groupId>
    <artifactId>renovatio-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Renovatio - Multi-Language Refactoring Platform</name>
    <description>Multi-language refactoring platform with MCP protocol support</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <openrewrite.version>8.21.0</openrewrite.version>
        <springdoc.version>2.3.0</springdoc.version>
        <jackson.version>2.15.4</jackson.version>
        <javapoet.version>1.13.0</javapoet.version>
        <freemarker.version>2.3.32</freemarker.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lucene.version>9.8.0</lucene.version>
        <jgit.version>6.7.0.202309050840-r</jgit.version>
        <antlr4.version>4.11.1</antlr4.version>
        <mustache.version>0.9.10</mustache.version>
        <picocli.version>4.7.6</picocli.version>
        <!-- Lombok for boilerplate reduction -->
        <lombok.version>1.18.34</lombok.version>
    </properties>

    <modules>
        <module>renovatio-shared</module>
        <module>renovatio-core</module>
        <module>renovatio-provider-java</module>
        <module>renovatio-provider-cobol</module>
        <module>renovatio-mcp-server</module>
        <module>renovatio-cli</module>
        <module>renovatio-api</module>
        <module>renovatio-cobol-runtime</module>
        <module>renovatio-cobol-ir</module>
        <module>renovatio-profile</module>
        <module>renovatio-decisions</module>
        <module>renovatio-llm</module>
        <module>cobol-openrewrite-recipes</module>
        <module>renovatio-cobol-annotations</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-shared</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-mcp-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-mcp-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-provider-java</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-provider-cobol</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-cobol-ir</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-profile</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-decisions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-llm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>cobol-openrewrite-recipes</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-cobol-annotations</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.shark.renovatio</groupId>
                <artifactId>renovatio-mcp-server</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>org.openrewrite</groupId>
                <artifactId>rewrite-java</artifactId>
                <version>${openrewrite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openrewrite</groupId>
                <artifactId>rewrite-yaml</artifactId>
                <version>${openrewrite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openrewrite</groupId>
                <artifactId>rewrite-java-17</artifactId>
                <version>${openrewrite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <!-- JGit for Git operations -->
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${jgit.version}</version>
            </dependency>

            <!-- Lucene for indexing and search -->
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-core</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-queryparser</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analysis-common</artifactId>
                <version>${lucene.version}</version>
            </dependency>

            <!-- Java code generation -->
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>${javapoet.version}</version>
            </dependency>

            <!-- Template engines -->
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>${freemarker.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.spullara.mustache.java</groupId>
                <artifactId>compiler</artifactId>
                <version>${mustache.version}</version>
            </dependency>

            <!-- Object mapping -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- ANTLR for NQL grammar -->
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4</artifactId>
                <version>${antlr4.version}</version>
            </dependency>

            <!-- Lombok for boilerplate code generation -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.openrewrite.maven</groupId>
                    <artifactId>rewrite-maven-plugin</artifactId>
                    <version>5.52.0</version>
                    <configuration>
                        <activeRecipes>
                            <recipe>org.openrewrite.java.format.AutoFormat</recipe>
                        </activeRecipes>
                        <configLocation>rewrite.yml</configLocation>
                    </configuration>
                </plugin>
                <!-- Ensure Lombok annotation processing across all modules by default -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
